<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_faq_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_faq_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_bottom" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/guideline_top">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

<!--                <Switch-->
<!--                    android:id="@+id/switch1"-->
<!--                    android:layout_width="330dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/FAQ1"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <TextView
                    android:id="@+id/FAQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQ1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/answer1"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

<!--                <Switch-->
<!--                    android:id="@+id/switch2"-->
<!--                    android:layout_width="330dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/FAQ2"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
                <TextView
                    android:id="@+id/FAQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQ2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/answer2"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!--                <Switch-->
                <!--                    android:id="@+id/switch3"-->
                <!--                    android:layout_width="330dp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/FAQ3"-->
                <!--                    android:textSize="18sp"-->
                <!--                    android:textStyle="bold"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toTopOf="parent" />-->
                <TextView
                    android:id="@+id/FAQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQ3"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/answer3"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

<!--                <Switch-->
<!--                    android:id="@+id/switch4"-->
<!--                    android:layout_width="330dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/FAQ4"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
                <TextView
                    android:id="@+id/FAQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQ4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/answer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/answer4"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

<!--                <Switch-->
<!--                    android:id="@+id/switch5"-->
<!--                    android:layout_width="330dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/FAQ5"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
                <TextView
                    android:id="@+id/FAQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQ5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/answer5"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>