<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerificationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_bottom" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_content_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guideline_verification_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_content_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guideline_verification_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_content_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/guideline_content_start" />

        <TextView
            android:id="@+id/verifyHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_heading"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_content_start"
            app:layout_constraintTop_toTopOf="@id/guideline_content_top" />

        <EditText
            android:id="@+id/editVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/guideline_content_start"
            app:layout_constraintTop_toBottomOf="@+id/verifyHeading" />

        <TextView
            android:id="@+id/verificationCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verify_caption"
            app:layout_constraintStart_toStartOf="@id/guideline_content_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_content_end"
            app:layout_constraintTop_toBottomOf="@id/editVerificationCode" />

        <TextView
            android:id="@+id/testDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/test_date_heading"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_content_start"
            app:layout_constraintTop_toBottomOf="@id/verificationCaption" />

        <EditText
            android:id="@+id/editTestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@id/guideline_content_start"
            app:layout_constraintTop_toBottomOf="@+id/testDate" />

        <TextView
            android:id="@+id/testDateCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/test_date_caption"
            app:layout_constraintStart_toStartOf="@id/guideline_content_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
            app:layout_constraintTop_toBottomOf="@id/editTestDate" />


            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="SUBMIT RESULT"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/testDateCaption" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="CANCEL"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submitButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>