<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_bottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/disableAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Disable App"/>

        <TextView
            android:id="@+id/disableAppCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text ="@string/disable_app_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disableAppButton"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/disablePKUploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:checked="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disableAppCaption"
            android:text="Disable Periodic Key Upload"/>

        <TextView
            android:id="@+id/disablePKUploadCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text ="@string/disable_PK_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disablePKUploadButton"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/disableNotificationsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:checked="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disablePKUploadCaption"
            android:text="Disable Notification"/>

        <TextView
            android:id="@+id/disableNotificationsCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text ="@string/disable_notification_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disableNotificationsButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/clearDataButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimary"
        android:text="CLEAR DATA"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>